@@ -43,6 +43,12 @@ to the total number of nicks in the channel, and $4 to the mask given to
 /SCAN now supports a new sort flag "-stat", which sorts the output by
 channel status (chanops, then halfops, then voices, then the riff-raff).
 
+/HOP and /DEHOP
+---------------
+
+New commands /HOP and /DEHOP have been added, to give and remove halfop
+status (on servers that support it).
+
 PLUGINS
 -------
 
